    set should match the fields in the schema exactly. 

  - `dp_check_dataresource()` was looking for the the `fieldsMatch` property in
    the wrong location in the schema (it expected this property to be directly
    in the Data Resource). This property should be in the `schema` property of
    the Data Resource. 

  - `csv_reader()` now handles the `fieldsMatch` property of the schema
    correctly. Previously the the code assumed `exact` for the `fieldsMatch`
    property. In general this would result in an error when reading a file. 


  - `dp_apply_schema()` gives clearer error messages: reports the column in
    which the error occured.

  - Small changes to print functions.


CHANGES IN VERSION 0.2.0

NEW FEATURES

  - `dp_to_code` will remove white space at the beginning and end of character
    values from category values and the field and multiple hypens at the
    beginning of values when the option `DP_TRIM_CODES` is set to `TRUE`
    (default value is `FALSE`). Ignoring multiple hyphens can be disabled by
    setting `DP_TRIM_HYPHEN` to `FALSE`. 
  
  - `dp_to_factor` will ignore white space at the beginning and end of character
    values and multiple hypens at the beginning of values when the option
    `DP_TRIM_CODES` is set to `TRUE` (default value is `FALSE`). Ignoring
    multiple hyphens can be disabled by setting `DP_TRIM_HYPHEN` to `FALSE`. 

  - `dp_generate_fielddescriptor` now generates correct meta data for objects
    of type `code` from the `codelist` package.

  - `dp_categorieslist` returns the code list from a `code` object from the
    `codelist` package.

  - `dp_type()` and `dp_type<-()` added for Field Descriptor to get and set 
    the field type.

  - Added checking of constraints for fields of type 'datetime', 'year', 
    `yearmonth`.

BUG FIXES

  - Checking 'minimum', 'maximum', 'exclusiveMinimum', 'exclusiveMaximum' 
    constraints on non numeric fields failed.
