@@ -23,6 +23,9 @@ BUG FIXES
 
   - Small changes to print functions.
 
+  - Fix issue with large integer when using a yaml file. These are now 
+    converted to numeric.
+
 
 CHANGES IN VERSION 0.2.0
 
